[package]
name = "wasp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = { git = "https://github.com/seanmonstar/warp.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.29"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sysinfo = "0.29.11"
